New version of Cayenne project XML:  - remove obsolete code